test/files/neg/t4163.check
t4163.scala:4: error: '<-' expected but '=' found.
<<<<<<< HEAD
        x = 3
          ^
t4163.scala:5: error: illegal start of simple expression
        y <- 0 to 100
=======
      x = 3
        ^
t4163.scala:5: error: illegal start of simple expression
      y <- 0 to 100
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
^
two errors found
